--- a/hiragana.css
+++ b/hiragana.css
@@ -1,6 +1,8 @@
 html, body {
     margin: 0;
     padding: 0;
+    background-color: #FCFCFC;
+    color: #333;
 }
 
 p {
@@ -17,10 +19,36 @@ p {
     border-color: #CCC;
 }
 
+.qanswer, .qbanswer, .qganswer {
+    border-width: 1px;
+    border-style: solid;
+    width: 200px;
+    height: 40px;
+    text-align: center;
+    background-color: #FFF;
+}
+
+.qanswer {
+    border-color: #CCC;
+}
+
+.qanswer:focus {
+    border-color: #49A9DB;
+}
+
+.qbanswer {
+    border-color: red;
+}
+
+.qganswer {
+    border-color: #0fcf58;
+}
+
 #qchar {
     margin-top: -30px;
     margin-bottom: -20px;
     font-size: 800%;
+    color: #000;
 }
 
 #qfeedback {
