--- a/hiragana.css
+++ b/hiragana.css
@@ -1,29 +1,45 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300);
+
 html, body {
     margin: 0;
     padding: 0;
     background-color: #FCFCFC;
     color: #333;
+    font-family: 'Open Sans', sans-serif;
 }
 
-p {
-    padding: 2%;
+ul {
+    list-style-type: none;
 }
 
-#main {
-    width: 500px;
-    margin: 0 auto;
-    margin-top: 200px;
-    text-align: center;
-    border-width: 0 1px 0 1px;
-    border-style: solid;
-    border-color: #CCC;
+li {
+    margin-bottom: 20px;
 }
 
-.qanswer, .qbanswer, .qganswer {
+li:last-of-type {
+    margin-bottom: 0;
+}
+
+input[type=button] {
     border-width: 1px;
     border-style: solid;
-    width: 200px;
-    height: 40px;
+    font-size: 15px;
+    text-align: center;
+    background-color: #FFF;
+    width: 300px;
+    height: 80px;
+}
+
+input[type=button]:hover, input[type=button]:focus {
+    border-color: #49A9DB;
+}
+
+input[type=text] {
+    border-width: 1px;
+    border-style: solid;
+    font-size: 20px;
+    width: 300px;
+    height: 80px;
     text-align: center;
     background-color: #FFF;
 }
@@ -42,6 +58,31 @@ p {
 
 .qganswer {
     border-color: #0fcf58;
+}
+
+p {
+    padding: 2%;
+}
+
+.main-menu {
+    width: 500px;
+    margin: 0 auto;
+    margin-top: 100px;
+    text-align: center;
+    border-width: 0 1px 0 1px;
+    border-style: solid;
+    border-color: #CCC;
+}
+
+.hiragana-to-romaji {
+    display: none;
+    width: 500px;
+    margin: 0 auto;
+    margin-top: 100px;
+    text-align: center;
+    border-width: 0 1px 0 1px;
+    border-style: solid;
+    border-color: #CCC;
 }
 
 #qchar {
